phf_macros/tests/compile-fail/bad-syntax.stderr
error: expected identifier
 --> $DIR/bad-syntax.rs:5:5
  |
5 |     => //~ ERROR expected identifier
  |     ^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
